--- a/2021-1/practicos/Practico4.tex
+++ b/2021-1/practicos/Practico4.tex
@@ -243,6 +243,16 @@ usando el método visto en clase.
 
 %
 \item Probar que si \,$(a,1001)=1$\, entonces \,$1001$\, divide a \,$a^{720}-1$.
+
+\item Sea $p$ primo impar. 
+\begin{enumerate}
+    \item Probar que las únicas raíces cuadradas de 1 módulo $p$,  son $1$ y $-1$ módulo $p$. Es decir, probar que $x^2 \equiv 1 \pmod{p}$, entonces  $x \equiv \pm1 \pmod{p}$.
+    \item Sea  $p = d \cdot 2^s + 1$ donde $d$ es impar. Dado $a$ entero tal que $0 < a <p$, probar que 
+    \begin{itemize}
+        \item $a^{d} \equiv 1 \pmod{p}$, o
+        \item $a^{2^r\cdot\, d} \equiv -1 \pmod{p}$  para algún $r$ tal que $0 \le r < s$.
+    \end{itemize}
+\end{enumerate}
 \end{enumerate}
 
 
