--- a/2021-1/apunte/Cap.03.tex
+++ b/2021-1/apunte/Cap.03.tex
@@ -641,7 +641,7 @@ esta demostrado.
 El  algoritmo explicado anteriormente para obtener el $\mcd(a,b)$ como combinación lineal entera $sa+tb$ no es muy sencillo de programar. Más aún, requiere terminar el cálculo del $\mcd$ usando el algoritmo de Euclides, para comenzar a calcular los coeficientes enteros $s,t$. Veremos a continuación un algoritmo sencillo de programar que nos devuelve $s$ y $t$. El algoritmo se basa en el siguiente resultado. 
 \end{observacion*}
 
-\begin{proposicion}\label{prop-alg-euclides-2} Sean, $a,b$ enteros, $b>0$, y $r_i, q_i$ los restos y cocientes obtenido en el algoritmo de Euclides (ver tabla \ref{tabla-AE}). Entonces, 
+\begin{proposicion}\label{prop-alg-euclides-2} Sean, $a,b$ enteros, $b>0$, y $r_i, q_i$ los restos y cocientes obtenidos en el algoritmo de Euclides (ver tabla \ref{tabla-AE}). Entonces, 
 \begin{enumerate}[label=\textit{\alph*)}]
     \item\label{it.algeuc1}     para $0 \le i \le k$,  existen $s_i, t_i \in \Z$ tal que
     \begin{equation*}
