Terminado práctico  1 y  soluciones

--- a/2021-1/practicos/Practico1.tex
+++ b/2021-1/practicos/Practico1.tex
@@ -282,6 +282,11 @@ Demostrar por inducción que el término general de esta sucesión se puede calc
 \[ u_n= \frac{1}{\sqrt{5}}\left[\left(\frac{1+\sqrt{5}}{2}\right)^n-\left(\frac{1-\sqrt{5}}{2}\right)^n\right].\]
 (\textit{Ayuda:} usar que $\frac{1+\sqrt{5}}{2}$ y $\frac{1-\sqrt{5}}{2}$ son las raíces de la ecuación cuadrática $x^2-x-1=0$ y por lo tanto  $\left(\frac{1\pm\sqrt{5}}{2}\right)^{n+1} = \left(\frac{1\pm\sqrt{5}}{2}\right)^{n}+\left(\frac{1\pm\sqrt{5}}{2}\right)^{n-1}$).
 
+    \item Probar las siguientes afirmaciones usando inducción en $n$:
+    \begin{enumerate}
+        \item $n^2\leq 2^n$ para todo $n\in{\mathbb N}$, $n>3$ .
+        \item $\forall n \in {\mathbb N}$,\ $3^n \ge 1 + 2^n$.
+    \end{enumerate}
 
 \end{enumerate}
 
