Actualizacion de prácticos y soluciones

--- a/2021-1/practicos/Practico1.tex
+++ b/2021-1/practicos/Practico1.tex
@@ -67,6 +67,11 @@
 
 \newcommand{\rta}{\noindent\textit{Rta: }} 
 
+\newcommand \Z{{\mathbb Z}}
+\newcommand \N{{\mathbb N}}
+\newcommand \mcd{\operatorname{mcd}}
+\newcommand \mcm{\operatorname{mcm}}
+
 \begin{document}
     \baselineskip=0.55truecm %original
     
