--- a/2021-1/practicos/Practico2-soluciones.tex
+++ b/2021-1/practicos/Practico2-soluciones.tex
@@ -59,6 +59,8 @@
 %\setlength{\parindent}{0,7cm}% tamaño de sangria.
 \setlength{\parskip}{0,4cm} % separación entre parrafos.
 \renewcommand{\baselinestretch}{0.90}% separacion del interlineado
+\setlist[1]{topsep=8pt,itemsep=.4cm,partopsep=4pt, parsep=4pt} %espacios nivel 1 listas
+\setlist[2]{itemsep=.15cm}  %espacios nivel 2 listas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\end{comment}
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -66,8 +68,7 @@
 \newcommand{\rta}{\noindent\textit{Rta: }} 
 
 \begin{document}
-    \baselineskip=0.55truecm %original
-    
+    \baselineskip=0.55truecm %original    
     
 {\bf \begin{center} Práctico 2 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
 
