--- a/2021-1/practicos/Practico2.tex
+++ b/2021-1/practicos/Practico2.tex
@@ -225,9 +225,9 @@ personas de manera tal que cada persona reciba al menos $3$ libros?
     \item  recuerda que ha formado la clave de la siguiente manera: los primeros siete caracteres son una mezcla de las letras de su nombre (CECILIA), y los \'ultimos cuatro caracteres son una permutaci\'on de las cuatro cifras de su a\~no de nacimiento (1998)?
 \end{enumerate}
 
-\item Se está arreglando la plaza principal de la ciudad. Leandro, el jardinero, ha calculado que
-necesita $6$ plantines para cada cantero rectangular. Él dispone de $4$ clases de plantines y quiere
-que en cada cantero haya, como mínimo, dos clases de plantines diferentes. ¿De cuántas maneras puede seleccionar los plantines a colocar en cada cantero? 
+%\item Se está arreglando la plaza principal de la ciudad. Leandro, el jardinero, ha calculado que
+%necesita $6$ plantines para cada cantero rectangular. Él dispone de $4$ clases de plantines y quiere
+%que en cada cantero haya, como mínimo, dos clases de plantines diferentes. ¿De cuántas maneras puede seleccionar %los plantines a colocar en cada cantero? 
 
 \end{enumerate}
 \end{document}
