--- a/2021-1/practicos/Practico3.tex
+++ b/2021-1/practicos/Practico3.tex
@@ -68,8 +68,7 @@
 \newcommand{\rta}{\noindent\textit{Rta: }} 
 
 \begin{document}
-    \baselineskip=0.55truecm %original
-    
+    \baselineskip=0.55truecm %original    
 
   {\bf \begin{center}\large  Práctico 3 \\ Matemática Discreta I -- Año 2021/1 \\ FAMAF \end{center}}
 
@@ -80,9 +79,28 @@
 
 
 \item Hallar el cociente y el resto de la división de:
-\
-
-
+\begin{enumerate}
+    \begin{minipage}{0.25 \textwidth}
+        \item 
+        $135$ por $23$.
+    \end{minipage}
+    \begin{minipage}{0.25 \textwidth}
+      \item  $-135$ por $23$.
+    \end{minipage}
+    \begin{minipage}{0.25 \textwidth}
+      \item $135$ por $-23$.
+    \end{minipage}
+  
+    \begin{minipage}{0.25 \textwidth}
+      \item $-135$ por $-23$.
+    \end{minipage}
+    \begin{minipage}{0.25 \textwidth}
+      \item$127$ por $99$.
+    \end{minipage}
+    \begin{minipage}{0.25 \textwidth}
+      \item   $-98$ por $-73$. 
+    \end{minipage}
+  \end{enumerate}
 
 \item 
 \begin{enumerate}
@@ -143,6 +161,7 @@
   \end{minipage}
 \end{enumerate}
 
+\item Expresar en  base $5$:  $(1503)_6 + (1111)_2$.  
 
 \item Sean $a$, $b$, $c \in {\mathbb Z}$. Demostrar las siguientes afirmaciones:
   \begin{enumerate}
@@ -210,6 +229,7 @@
 \begin{enumerate}
  \item Probar que el producto de tres enteros consecutivos es divisible por 6.
  \item Probar que el producto de cuatro enteros consecutivos es divisible por 24 (ayuda: el número combinatorio $\binom{n}{4}$ es entero).
+ \item Probar que el producto de $m$  enteros consecutivos es divisible por $m!$.
 \end{enumerate}
 
 
@@ -218,12 +238,28 @@
 
 
 
-\item Encontrar $(7469,2464)$, $(2689,4001)$, $(2447,-3997)$, $(-1109,-4999)$.
+\item Encontrar 
+ \begin{enumerate}
+    \begin{minipage}{0.40 \textwidth}
+      \item $(7469,2464)$,
+    \end{minipage}
+    \begin{minipage}{0.40 \textwidth}
+      \item  $(2689,4001)$,
+    \end{minipage}
+  \vskip .1cm
+    \begin{minipage}{0.40 \textwidth}
+      \item  $(2447,-3997)$,
+    \end{minipage}
+    \begin{minipage}{0.40 \textwidth}
+      \item $(-1109,-4999)$.
+    \end{minipage}
+  \end{enumerate}
 
 
 \item
 Calcular el máximo común divisor y expresarlo como combinación lineal de los
 números dados, para cada uno de  los siguientes pares de números:
+\vskip .1cm
 \begin{enumerate}
 \begin{minipage}{0.25 \textwidth}
   \item  14 y 35, 
@@ -234,7 +270,7 @@ números dados, para cada uno de  los siguientes pares de números:
 \begin{minipage}{0.25 \textwidth}
     \item 12 y 52,
 \end{minipage}
-
+\vskip .1cm
 \begin{minipage}{0.25 \textwidth}
   \item 12 y $-52$, 
 \end{minipage}
@@ -244,7 +280,7 @@ números dados, para cada uno de  los siguientes pares de números:
 \begin{minipage}{0.25 \textwidth}
 \item 725 y 441,
 \end{minipage}
-
+\vskip .1cm
 \begin{minipage}{0.25 \textwidth}
 \item 606 y 108.\end{minipage}
 \end{enumerate}
@@ -261,12 +297,6 @@ números dados, para cada uno de  los siguientes pares de números:
  \item Sean $a$ y $b$ coprimos. Probar que si $a \mid c$ y $b \mid c$, entonces $a\cdot b \mid c$.
 
 \end{enumerate}
-
-
-
-
-\item Probar que si $n \in {\mathbb Z}$, entonces los números $2n+1$ y $\dfrac{n(n+1)}{2}$ son coprimos.
-
 
 
 
@@ -289,6 +319,8 @@ números dados, para cada uno de  los siguientes pares de números:
 \item Determinar con el criterio de la raíz  cuáles de los siguientes números son primos: 113, 123, 131, 151, 199, 503.
 
 
+\item Probar que si $n \in {\mathbb Z}$, entonces los números $2n+1$ y $n(n+1)$ son coprimos.
+
 \item Si $a\cdot b$ es un cuadrado y $a$ y $b$ son coprimos, probar que $a$ y $b$ son cuadrados.
 
 
@@ -300,7 +332,11 @@ números dados, para cada uno de  los siguientes pares de números:
     \item Probar  que $\sqrt[3]{4}$ no es un número racional.
 \end{enumerate}
 
-
+\item  
+\begin{enumerate}
+    \item Probar  que $\sqrt[4]{54}$ no es racional. 
+    \item Probar no existen $m, n$ tal que $21 n^5 = m^5$. 
+\end{enumerate}
 
 \item Probar que si $p_k$ es el $k$-ésimo primo positivo entonces
 $$p_{k+1}\leq p_1\cdot p_2\cdot \cdots \cdot p_k+1$$
