--- a/2021-1/practicos/Practico4.tex
+++ b/2021-1/practicos/Practico4.tex
@@ -66,6 +66,7 @@
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\rta}{\noindent\textit{Rta: }} 
+
 \newcommand \Z{{\mathbb Z}}
 \newcommand \N{{\mathbb N}}
 \newcommand \mcd{\operatorname{mcd}}
@@ -178,6 +179,31 @@ usando el método visto en clase.
 
 
 
+\item Encontrar todas las soluciones de los siguientes sistemas de ecuaciones en congruencia 
+    
+\begin{enumerate}
+    \item  
+        $\begin{array}{l}
+        4x\equiv 7 \pmod{11} \\
+        7x\equiv 8 \pmod{12}
+        \end{array}$
+        \vskip .4cm
+    \item 
+    $\begin{array}{l}
+    x \equiv -1 \pmod{7} \\
+    x \equiv 3 \pmod{10} \\
+    x \equiv -2 \pmod{11}.
+    \end{array}$
+    \vskip .4cm 
+        \item         $\begin{array}{l}
+            x \equiv -1 \pmod{2}\\
+            x \equiv 5 \pmod{9}\\
+            x \equiv -3 \pmod{7}.
+            \end{array}$
+
+\end{enumerate}
+
+
 
 \item Dado $t \in {\mathbb Z}$, decimos que $t$ es {\it inversible m\'odulo $m$} si existe $h \in {\mathbb Z}$ tal que $th\equiv 1\,(\ m)$.
   \begin{enumerate}
@@ -263,6 +289,7 @@ usando el método visto en clase.
 \item Dada la ecuación de congruencia
 $$14\,x\equiv 10 \, (26),$$
 hallar todas las soluciones en el intervalo $[-20,10]$. Hacerlo con el método usado en la teórica.
+
 \item Dada la ecuación de congruencia
 $$21\,x\equiv 15 \, (39),$$
 hallar todas las soluciones en el intervalo $[-10,30]$. Hacerlo con el método usado en la teórica. 
