--- a/2021-1/practicos/Practico5.tex
+++ b/2021-1/practicos/Practico5.tex
@@ -66,6 +66,7 @@
 %%% FIN FORMATOS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\rta}{\noindent\textit{Rta: }} 
+
 \newcommand \Z{{\mathbb Z}}
 \newcommand \N{{\mathbb N}}
 \newcommand \mcd{\operatorname{mcd}}
@@ -473,11 +474,217 @@ encuentre un ciclo hamiltoniano (si existe). Determine si existe una caminata eu
 \item Dé todos los árboles de 5 vértices no isomorfos.
 \end{enumerate}
 
-\subsection*{$\S$ Ejercicios de repaso} Los ejercicios marcados con ${}^{(*)}$ son de mayor dificultad.
+\subsection*{$\S$ Ejercicios de repaso}
 
 \begin{enumerate}[resume]
-    \item a falta
-    \item b
-    \item c
+    \item 
+\begin{enumerate}
+	\item Probar que los  siguientes grafos no son isomorfos. 
+	
+	\vskip .1cm
+	
+	\begin{center}
+		\begin{tabular}{llll}
+			& 
+			\begin{tikzpicture}[scale=0.6,rotate=90]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			%
+			\Vertex[x=0.00, y=0.00]{0}
+			\Vertex[x=3.00, y=0.00]{1}
+			\Vertex[x=3, y=-6]{2}
+			\Vertex[x=1.5, y=-3.00]{3}
+			\Vertex[x=4.5, y=-3.00]{4}
+			\Edges(0,3,1,4,2,3,0,4)
+			\end{tikzpicture}
+			&
+			\qquad\qquad
+			& 
+			\begin{tikzpicture}[scale=0.6,rotate=90]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			\Vertex[x=0.00, y=0.00, L=$a$]{a}
+			\Vertex[x=3.00, y=0.00, L=$b$]{b}
+			\Vertex[x=3, y=3, L=$c$]{c}
+			\Vertex[x=0.00, y=3.00, L=$d$]{d}
+			\Vertex[x=4.50, y=1.5, L=$e$]{e}
+			\Edges(a,b,e,c,d,a,e)
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
+	
+	\vskip .1cm
+	
+	\item Encontrar una caminata euleriana en el siguiente grafo. 
+	\vskip .1cm
+	\begin{center}
+		\begin{tikzpicture}[scale=0.8]
+		%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+		\Vertex[x=0, y=1.00,L=3]{1}
+		\Vertex[x=3, y=2,L=4]{2}
+		\Vertex[x=9, y=0,L=5]{3}
+		\Vertex[x=3, y=-2,L=6]{4}
+		\Vertex[x=0, y=-1,L=2]{5}
+		\Vertex[x=6, y=0,L=1]{6}
+		\Edges(1,2,3,4,5,1)
+		\Edges(5,2,6,4)
+		\end{tikzpicture} 
+	\end{center}
+\end{enumerate}
+
+\item 
+\begin{enumerate}
+    \item Probar que los  siguientes grafos no son isomorfos.
+          \vskip .1cm
+    
+    \begin{center}
+        \begin{tabular}{llll}
+            &
+            \begin{tikzpicture}[scale=0.8]
+            %\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+            \Vertex[x=-2, y=3, L=$a$]{a}
+            \Vertex[x=0, y=3, L=$b$]{b}
+            \Vertex[x=2, y=3, L=$c$]{c}
+            \Vertex[x=-1, y=1, L=$d$]{d}
+            \Vertex[x=1, y=1, L=$e$]{e}
+            \Vertex[x=0, y=-1, L=$f$]{f}
+            \Edges(a,b,c,e,f,d,a)\Edges(b,e,d,b)
+            \end{tikzpicture}
+            &
+            \qquad \qquad
+            &
+            \begin{tikzpicture}[scale=0.5]
+        %\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+        \Vertex[x=0, y=4]{5}
+        \Vertex[x=0, y=-4]{6}
+                    
+        \Vertex[x=-2, y=2]{1}
+        \Vertex[x=2, y=2]{2}
+        \Vertex[x=2, y=-2]{3}
+        \Vertex[x=-2, y=-2]{4}
+        \Edges(1,5,2)\Edges(3,6,4)
+        \Edges(1,2,3,4,1,3,4,2)
+        \end{tikzpicture}
+        \end{tabular}
+    \end{center}
+    
+    \vskip .1cm
+    
+    \item En el grafo de la derecha del ítem anterior, encontrar un \textit{circuito euleriano}, es decir una caminata euleriana que comienza
+          y termina en un mismo vértice.
+            
+\end{enumerate}
+
+\item 
+\begin{enumerate}
+	\item Probar que los  siguientes grafos no son isomorfos. 
+	
+	\vskip .1cm
+	
+	\begin{center}
+		\begin{tabular}{llll}
+			& 
+			\begin{tikzpicture}[scale=0.6,rotate=-243]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			%
+			\Vertex[x=0.00, y=-6.0, L=$a$]{0}
+			\Vertex[x=3.00, y=0.00, L=$b$]{1}
+			\Vertex[x=3, y=-6, L=$c$]{2}
+			\Vertex[x=1.5, y=-3.00, L=$d$]{3}
+			\Vertex[x=4.5, y=-3.00, L=$e$]{4}
+			\Edges(0,3,1,4,2,3,0,4)
+			\end{tikzpicture}
+			&
+			\qquad\qquad
+			& 
+			\begin{tikzpicture}[scale=0.6]%,rotate=90]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			\Vertex[x=1.5, y=1.5, L=$1$]{a}
+			\Vertex[x=3.00, y=0.00, L=$2$]{b}
+			\Vertex[x=3, y=3, L=$3$]{c}
+			\Vertex[x=0.00, y=3.00, L=$4$]{d}
+			\Vertex[x=4.50, y=1.5, L=$5$]{e}
+			\Edges(a,b,e,c,d,a,e)
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
+	
+	\vskip .1cm
+	
+	\item Encontrar una caminata euleriana en el siguiente grafo. 
+	\vskip .1cm
+	\begin{center}
+		\begin{tikzpicture}[scale=0.8]
+		%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+		\Vertex[x=6, y=1.00,L=3]{1}
+		\Vertex[x=3, y=2,L=4]{2}
+		\Vertex[x=0, y=0,L=5]{3}
+		\Vertex[x=3, y=-2,L=6]{4}
+		\Vertex[x=6, y=-1,L=2]{5}
+		\Vertex[x=3, y=0,L=1]{6}
+		\Edges(1,2,3,4,5,1)
+		\Edges(5,2,6,4)
+		\end{tikzpicture} 
+	\end{center}
+\end{enumerate}
+
+
+\item 
+\begin{enumerate}
+	\item Probar que los  siguientes grafos no son isomorfos.
+	
+	\vskip .1cm
+	
+	\begin{center}
+		\begin{tabular}{llll}
+			&
+			\begin{tikzpicture}[scale=1]%,rotate=45]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			\Vertex[x=0, y=0, L={\footnotesize$1$}]{a}
+			\Vertex[x=0, y=2, L={\footnotesize$2$}]{b}
+			\Vertex[x=2, y=0, L={\footnotesize$3$}]{c}
+			\Vertex[x=2, y=2, L={\footnotesize$4$}]{d}
+			\Vertex[x=3.5, y=1, L={\footnotesize$5$}]{e}
+			\Vertex[x=1, y=1, L={\footnotesize$6$}]{f}
+			\Edges(a,b,d)
+			\Edges(c,a,c,e,d,f,a)
+			\end{tikzpicture}
+			&
+			\qquad\qquad
+			
+			&
+			\begin{tikzpicture}[scale=1]
+			%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+			%
+			\Vertex[x=0.00, y=1.5, L=$a$]{0}
+			\Vertex[x=2, y=1.5, L=$b$]{1}
+			\Vertex[x=0.00, y=0, L=$c$]{2}
+			\Vertex[x=2, y=0, L=$d$]{3}
+			\Vertex[x=0, y=-1.5, L=$e$]{4}
+			\Vertex[x=2, y=-1.5, L=$f$]{5}
+			\Edges(2,0,1,3,2,1)
+			\Edges(2,4,5,3)
+			
+			\end{tikzpicture}
+		\end{tabular}
+	\end{center}
+	
+	\vskip .1cm
+	
+	\item Encontrar una caminata euleriana en el siguiente grafo.
+	\vskip .1cm
+	\begin{center}
+			\begin{tikzpicture}[scale=1,rotate=180]
+		%\SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+		\Vertex[x=0, y=0, L={\footnotesize$1$}]{a}
+		\Vertex[x=0, y=2, L={\footnotesize$2$}]{b}
+		\Vertex[x=2, y=0, L={\footnotesize$3$}]{c}
+		\Vertex[x=2, y=2, L={\footnotesize$4$}]{d}
+		\Vertex[x=3.5, y=1, L={\footnotesize$5$}]{e}
+		\Vertex[x=1, y=1, L={\footnotesize$6$}]{f}
+		\Edges(a,b,d,c,a,c,e,d,f,a)
+		\end{tikzpicture}
+	\end{center}
+\end{enumerate}
+
+
 \end{enumerate}
 \end{document}
