Beamer de la clase 01

--- a/2021-1/beamer/definiciones.tex
+++ b/2021-1/beamer/definiciones.tex
@@ -54,6 +54,15 @@
 {%
 	\vskip .2cm}% end code
 
+    \newenvironment{notacion}[1][]% environment name
+    {% begin code
+        \par\vskip .2cm%
+        {\color{blue}Notación #1}%
+        \vskip .2cm
+    }%
+    {%
+        \vskip .2cm}% end code
+
 \newenvironment{observacion}[1][]% environment name
 {% begin code
 	\par\vskip .2cm%
