Menores en C01_md1.tex  y nuevo C02_md1.tx

--- a/2021-1/beamer/C01_md1.tex
+++ b/2021-1/beamer/C01_md1.tex
@@ -369,19 +369,35 @@
         $$
         \end{ejemplo*}
         \begin{proof}
-        (1)   Veremos que $a(-b)$ es inverso aditivo de $ab$. 
+        (2)  Probaremos $a(-b)= -(ab)$.  
+        \vskip .2cm
+        Para ello, veremos que $a(-b)$ es el inverso aditivo de $ab$. 
         \vskip .2cm
         Por unicidad del inverso aditivo (axioma \textbf{I6}), de deduce que $a(-b) = -(ab)$.
-        \vskip -.6cm
+        
+        \end{proof}
+    \end{frame}
+
+    \begin{frame}
+        
         \begin{alignat*}2
         ab + a(-b) &=a(b-b) &\qquad &\text{axioma (\textbf{I5})} \\
         &=a\cdot 0 &\qquad &\text{axioma (\textbf{I4})}\\
         &= 0 &\qquad &\text{ejercicio p. \ref{a0=0}}.
         \end{alignat*}
-        \qed 
-        \end{proof}
-    \end{frame}
+        
+        Es complétamente análogo probar $(-a)b = -(ab)$.
 
+        \vskip .4cm
+
+        (1) Ejercicio. 
+
+        
+        \qed 
+    \vskip 3cm
+        
+    
+    \end{frame}
 
 \end{document}
 
